[gd_scene load_steps=8 format=3 uid="uid://cnbrvm3bpnmr4"]

[ext_resource type="PackedScene" uid="uid://crpjddxtudeng" path="res://Scenes/LightCycleModel.tscn" id="1_6fokd"]
[ext_resource type="Script" path="res://Scripts/LightCycleBot.gd" id="1_meleu"]
[ext_resource type="AudioStream" uid="uid://cw85t0t54s3t2" path="res://Audio/engine.ogg" id="2_13jy1"]
[ext_resource type="AudioStream" uid="uid://c55pvt6k68du8" path="res://Audio/explosion.mp3" id="4_i2sp1"]

[sub_resource type="BoxShape3D" id="BoxShape3D_00eag"]

[sub_resource type="BoxShape3D" id="BoxShape3D_utjrt"]
margin = 0.0
size = Vector3(30, 2, 0.01)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_s3fnn"]
radius = 30.0
height = 90.0

[node name="LightCycleBot" type="Node3D"]
script = ExtResource("1_meleu")

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.906308, 0.422618, 0, -0.422618, 0.906308, 0, 5, 10)
light_color = Color(0.145098, 1, 1, 1)
light_energy = 5.0
light_indirect_energy = 3.0
light_volumetric_fog_energy = 3.0
light_specular = 2.0
spot_range = 20.0
spot_angle = 15.0

[node name="LightCycleModel" parent="." instance=ExtResource("1_6fokd")]

[node name="LightCycleNoseCollider" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.50893)
collision_layer = 3
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="LightCycleNoseCollider"]
shape = SubResource("BoxShape3D_00eag")

[node name="Node3D" type="Node3D" parent="."]

[node name="RayCastFront" type="RayCast3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.2, 1.5)
target_position = Vector3(0, 100, 0)
collision_mask = 3
debug_shape_custom_color = Color(1, 0.124571, 0.0864943, 1)

[node name="RayCastLeft" type="RayCast3D" parent="Node3D"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0.5, 0.2, -3)
target_position = Vector3(0, 60, 0)
collision_mask = 3
debug_shape_custom_color = Color(1, 0.124571, 0.0864943, 1)
debug_shape_thickness = 1

[node name="RayCastRight" type="RayCast3D" parent="Node3D"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.5, 0.2, -3)
target_position = Vector3(0, 60, 0)
collision_mask = 3
debug_shape_custom_color = Color(1, 0.124571, 0.0864943, 1)

[node name="RayCastBackLeft" type="RayCast3D" parent="Node3D"]
transform = Transform3D(-3.09086e-08, 0.707107, 0.707107, -1, -4.37114e-08, 0, 3.09086e-08, -0.707107, 0.707107, 0.5, 0.2, -3)
target_position = Vector3(0, 40, 0)
collision_mask = 3
debug_shape_custom_color = Color(1, 0.124571, 0.0864943, 1)
debug_shape_thickness = 1

[node name="RayCastBackRight" type="RayCast3D" parent="Node3D"]
transform = Transform3D(-3.09086e-08, -0.707107, -0.707107, 1, -4.37114e-08, 0, -3.09086e-08, -0.707107, 0.707107, -0.5, 0.2, -3)
target_position = Vector3(0, 40, 0)
collision_mask = 3
debug_shape_custom_color = Color(1, 0.124571, 0.0864943, 1)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-1, -3.05162e-10, -8.74222e-08, 0, 0.999994, -0.00349065, 8.74228e-08, -0.00349065, -0.999994, 0, 5.177, -15)
fov = 107.7

[node name="LightCycleColliderDirection" type="Area3D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShapeDirectionLeft" type="CollisionShape3D" parent="LightCycleColliderDirection"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 30, 1, 15)
shape = SubResource("BoxShape3D_utjrt")

[node name="CollisionShapeDirectionRight" type="CollisionShape3D" parent="LightCycleColliderDirection"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -30, 1, 15)
shape = SubResource("BoxShape3D_utjrt")

[node name="LightCycleColliderVelocity" type="Area3D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShapeVelocity" type="CollisionShape3D" parent="LightCycleColliderVelocity"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -25)
shape = SubResource("CapsuleShape3D_s3fnn")

[node name="Audio" type="Node3D" parent="."]

[node name="AudioStreamEngine" type="AudioStreamPlayer3D" parent="Audio"]
stream = ExtResource("2_13jy1")
max_distance = 200.0

[node name="AudioStreamExplosion" type="AudioStreamPlayer3D" parent="Audio"]
stream = ExtResource("4_i2sp1")
max_distance = 1000.0

[connection signal="body_entered" from="LightCycleNoseCollider" to="." method="_on_light_cycle_nose_collider_body_entered"]
[connection signal="area_entered" from="LightCycleColliderDirection" to="." method="_on_light_cycle_collider_direction_area_entered"]
[connection signal="area_entered" from="LightCycleColliderVelocity" to="." method="_on_light_cycle_collider_velocity_area_entered"]
[connection signal="area_exited" from="LightCycleColliderVelocity" to="." method="_on_light_cycle_collider_velocity_area_exited"]
